# Neural-Network

./: .gitignore  CMakeLists.txt  Helper.hpp  NeuralNetwork.hpp  Product.hpp  README.md  Test_main.cpp  Train_main.cpp
Include/: Activations.hpp  Matrix.hpp
NeuralNetwork/Include/: Activations.cpp  Activations.hpp  Helper.hpp  Matrix.hpp  NeuralNetwork.hpp
include/: Activations.hpp  DataLoader.hpp  Matrix.hpp  NeuralNetwork.hpp  ReteNeurale
include/src/: ReteNeurale
src/: NeuralNetwork.cpp  Test_main.cpp  Train_Main_Batch.cpp  Train_main.cpp
